--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     }
 
     .logo {
-      width: 300px;
-      margin-bottom: 30px;
+      width: 3000px;
+      max-width: 100vw;
+      max-height: 100vh;
     }
 
    
@@ -38,7 +39,7 @@
 <body>
   <div class="logo">
     <!-- Simple abstract tech-themed logo -->
-    <img src="tech-magenta.png" alt="Tech Magenta" style="width: 100%; height: 100%;">
+    <img src="tech-magenta.svg" alt="Tech Magenta" style="width: 100%; height: 100%;">
   </div>
 </body>
 </html>
