--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .logo {
       width: 3000px;
       max-width: 100vw;
-      max-height: 100vh;
+      max-height: 80vh;
     }
 
    
@@ -39,7 +39,7 @@
 <body>
   <div class="logo">
     <!-- Simple abstract tech-themed logo -->
-    <img src="tech-magenta.svg" alt="Tech Magenta" style="width: 100%; height: 100%;">
+    <img src="tech-magenta-2.svg" alt="Tech Magenta" style="width: 100%; height: 100%;">
   </div>
 </body>
 </html>
