--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Magenta</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <!-- favicon -->
+    <link rel="icon" href="tech-magenta-2.svg" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech Magenta</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-    body {
-      height: 100vh;
-      background: white;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      color: white;
-    }
+      body {
+        height: 100vh;
+        background: white;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: white;
+      }
 
-    .logo {
-      width: 3000px;
-      max-width: 100vw;
-      max-height: 80vh;
-    }
+      .logo {
+        width: 3000px;
+        max-width: 100vw;
+        max-height: 80vh;
+      }
 
-   
-
-    h1 {
-      font-size: 4rem;
-      text-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-  </style>
-</head>
-<body>
-  <div class="logo">
-    <!-- Simple abstract tech-themed logo -->
-    <img src="tech-magenta-2.svg" alt="Tech Magenta" style="width: 100%; height: 100%;">
-  </div>
-</body>
+      h1 {
+        font-size: 4rem;
+        text-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="logo">
+      <!-- Simple abstract tech-themed logo -->
+      <img
+        src="tech-magenta-2.svg"
+        alt="Tech Magenta"
+        style="width: 100%; height: 100%"
+      />
+    </div>
+  </body>
 </html>
