--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <!-- favicon -->
-    <link rel="icon" href="tech-magenta-2.svg" type="image/svg+xml" />
+    <link rel="icon" href="tech-magenta.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Magenta</title>
+    <title>Tech Magenta &mdash; Digging IT</title>
     <style>
       * {
         margin: 0;
