--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- favicon -->
-    <link rel="icon" href="tech-magenta-fav.png" type="image/png" />
+    <link rel="icon" href="tech-magenta-fav2.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechMagenta &mdash; Digging IT</title>
     <style>
